# mcp-anything

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
examples/: README.md
examples/click-server/: AGENTS.md  README.md  mcp.json  pyproject.toml
examples/click-server/src/click/: backend.py  models.py  resources.py  server.py
examples/click-server/src/click/tools/: argument.py  bash_complete.py  bool_param_type.py  bytes_io_copy.py  choice.py  cli_runner.py  click_exception.py  command.py  command_collection.py  composite_param_type.py  console_stream.py  creation.py  general.py
examples/click-server/tests/: conftest.py  test_protocol.py  test_tools.py
examples/ffmpeg-server/: AGENTS.md  README.md
examples/github-server/: AGENTS.md  README.md  mcp.json  pyproject.toml
examples/github-server/src/mcp_github/: __init__.py  backend.py  models.py  prompts.py  resources.py  server.py  state.py
examples/github-server/src/mcp_github/tools/: api.py
examples/github-server/tests/: conftest.py  test_protocol.py  test_tools.py
examples/httpstat-server/: AGENTS.md  README.md  mcp.json  pyproject.toml
examples/yt-dlp-server/: AGENTS.md  README.md  pyproject.toml
src/mcp_anything/: __init__.py  __main__.py  cli.py  config.py  serve.py  url_fetcher.py
tests/: conftest.py  test_ast_analyzer.py  test_cli.py  test_codegen.py  test_detectors.py  test_enterprise.py  test_flask_fastapi.py  test_github_scope_comparison.py  test_help_parser.py  test_implement.py  test_integration.py  test_jaxrs.py  test_kotlin.py  test_micronaut.py  test_openapi.py  test_pipeline_engine.py  test_scanner.py  test_server_auth.py  test_spring_boot.py  test_typescript_types.py  test_url_fetcher.py
tests/fixtures/: petstore_openapi.json  (+1 more)
(+139 files in other folders)
