[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-github-server"
version = "0.1.0"
description = "MCP server for github (with 1093 capabilities)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-github = "mcp_github.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_github"]

